# we-worker

./: README.md  env_example  pyproject.toml
.github/workflows/: python-app.yml
tests/: conftest.py  test_app_objects_and_init.py  test_cli.py  test_os_executor.py  test_python_executor.py  test_utils.py
we_worker/: celery.py  cli.py  executors.py  logging.py  schemas.py  settings.py  utils.py  worker.py
